# sigil

./: AGENTS.md  README.md
.github/workflows/: release.yml
docs/: SETUP.md
docs/evidence/: 2026-06-23-ctap-hid-fido2-titan-communication.md  2026-06-23-fido2-hid-raw-hidraw.md  2026-06-23-hmac-iroh-derivation.md  2026-06-23-iroh-native-ping.md  2026-06-23-yubikey-hmac-detection.md
docs/spikes/001-iroh-native-ping/: Cargo.toml  README.md
docs/spikes/001-iroh-native-ping/src/: main.rs
docs/spikes/002-yubikey-hmac-detection/: Cargo.toml  README.md
docs/spikes/002-yubikey-hmac-detection/src/: main.rs
docs/spikes/003-fido2-hid-enumeration/: Cargo.toml  README.md
docs/spikes/003-fido2-hid-enumeration/src/: main.rs
docs/spikes/004-hmac-iroh-derivation/: Cargo.toml  README.md
docs/spikes/004-hmac-iroh-derivation/src/: main.rs
docs/spikes/005-frame-stream/: Cargo.toml  run-spike.sh
docs/spikes/005-frame-stream/src/: main.rs
docs/spikes/006-input-injection/: Cargo.toml
docs/spikes/007-titan-no-copy/: Cargo.toml
openspec/changes/validate-tauri-yubikey-iroh-mvp/: tasks.md
spikes/006-input-injection/src/: main.rs
spikes/007-titan-no-copy/src/: main.rs
src/: codecs.js  index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  input.rs  mod.rs  network.rs  state.rs  streaming.rs
src/ui/: index.html
