[package]
name = "app"
version = "0.1.0"
description = "Keyhome — FIDO2-secured remote desktop via Iroh"
authors = ["Dami"]
license = "MIT"
repository = ""
edition = "2024"
rust-version = "1.85"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
ctap-hid-fido2 = "3.5"
iroh = "1.0"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
enigo = { version = "0.2", features = ["serde"] }
sha2 = "0.10"
