[package]
name = "keyhome-input-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iroh = "1.0.0"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time", "signal"] }
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = { version = "0.2", features = ["serde"] }
