[package]
name = "keyhome-titan-derivation-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
iroh = "1.0.0"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "time", "signal"] }
ctap-hid-fido2 = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"